--- a/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -65,6 +65,9 @@
                                                 <rect key="frame" x="157" y="52.666666666666742" width="100" height="39"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                 <state key="normal" title="LET'S GO!"/>
+                                                <connections>
+                                                    <action selector="startButtonTapped" destination="IpJ-h8-xkM" eventType="touchUpInside" id="kpl-dF-8PK"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
