--- a/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/PhotosForDays/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -102,10 +103,59 @@
                     <view key="view" contentMode="scaleToFill" id="bkn-j5-36g">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qER-gO-VTa">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="1" minimumInteritemSpacing="1" id="ly1-wG-IAt">
+                                    <size key="itemSize" width="250" height="250"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionViewCell" id="nKC-RY-eKB" customClass="PhotoCollectionViewCell" customModule="PhotosForDays" customModuleProvider="target">
+                                        <rect key="frame" x="82" y="0.0" width="250" height="250"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="p5l-A3-A0b">
+                                            <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cor-vm-WjZ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
+                                                    <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="cor-vm-WjZ" firstAttribute="leading" secondItem="p5l-A3-A0b" secondAttribute="leading" id="XjL-zP-XTM"/>
+                                                <constraint firstItem="cor-vm-WjZ" firstAttribute="top" secondItem="p5l-A3-A0b" secondAttribute="top" id="YcF-uz-Fz0"/>
+                                                <constraint firstAttribute="trailing" secondItem="cor-vm-WjZ" secondAttribute="trailing" id="dCu-K6-kgr"/>
+                                                <constraint firstAttribute="bottom" secondItem="cor-vm-WjZ" secondAttribute="bottom" id="k8S-QH-2KU"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="photoImageView" destination="cor-vm-WjZ" id="CbW-Vo-qmM"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="delegate" destination="sAS-Cy-IZJ" id="h8K-L9-rNZ"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="qER-gO-VTa" firstAttribute="leading" secondItem="7rg-0G-7km" secondAttribute="leading" id="As5-DK-Ero"/>
+                            <constraint firstItem="qER-gO-VTa" firstAttribute="top" secondItem="bkn-j5-36g" secondAttribute="top" id="CiG-PS-dXW"/>
+                            <constraint firstItem="7rg-0G-7km" firstAttribute="trailing" secondItem="qER-gO-VTa" secondAttribute="trailing" id="J8H-9b-6az"/>
+                            <constraint firstAttribute="bottom" secondItem="qER-gO-VTa" secondAttribute="bottom" id="a6c-iP-Hs4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="7rg-0G-7km"/>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="collectionView" destination="qER-gO-VTa" id="GUI-pg-AqI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TYt-Ts-6dr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
